--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
